update doc api RESTful todos swagger
